k8s/gestionemusei.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionemusei
  namespace: museoapp2
  labels:
    app: gestionemusei
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestionemusei
  template:
    metadata:
      labels:
        app: gestionemusei
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: gestionemusei
          image: ghcr.io/francescopiofuccio/assd/gestionemusei:latest
          ports:
            - containerPort: 8085
              name: http
            - containerPort: 50055
              name: grpc
          livenessProbe:
            tcpSocket:
              port: 50055
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: gestionemusei-service
  namespace: museoapp2
spec:
  selector:
    app: gestionemusei
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 50055
      targetPort: 50055
  type: ClusterIP
