k8s/gestioneopere.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestioneopere
  namespace: museoapp2
  labels:
    app: gestioneopere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestioneopere
  template:
    metadata:
      labels:
        app: gestioneopere
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: gestioneopere
          image: ghcr.io/francescopiofuccio/assd/gestioneopere:latest
          ports:
            - containerPort: 8085
              name: http
            - containerPort: 50052
              name: grpc
          livenessProbe:
            tcpSocket:
              port: 50052
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: gestioneopere-service
  namespace: museoapp2
spec:
  selector:
    app: gestioneopere
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 50052
      targetPort: 50052
  type: ClusterIP
