k8s/gestionequest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionequest
  namespace: museoapp2
  labels:
    app: gestionequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestionequest
  template:
    metadata:
      labels:
        app: gestionequest
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: gestionequest
          image: ghcr.io/francescopiofuccio/assd/gestionequest:latest
          ports:
            - containerPort: 8085
              name: http
            - containerPort: 50054
              name: grpc
          livenessProbe:
            tcpSocket:
              port: 50054
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: gestionequest-service
  namespace: museoapp2
spec:
  selector:
    app: gestionequest
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 50054
      targetPort: 50054
  type: ClusterIP
