k8s/userdatamodule2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdatamodule2
  namespace: museoapp2
  labels:
    app: userdatamodule2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userdatamodule2
  template:
    metadata:
      labels:
        app: userdatamodule2
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: userdatamodule2
          image: ghcr.io/francescopiofuccio/assd/userdatamodule2:latest
          ports:
            - containerPort: 8085
              name: http
            - containerPort: 50053
              name: grpc
          livenessProbe:
            tcpSocket:
              port: 50053
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: userdatamodule2-service
  namespace: museoapp2
spec:
  selector:
    app: userdatamodule2
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 50053
      targetPort: 50053
  type: ClusterIP
